# tyclaw.rs

./: Cargo.toml  LICENSE  README.md  jenkins-start.sh  jenkins-stop.sh  start.sh  tyc
crates/dingtalk-gateway/: Cargo.toml
crates/dingtalk-gateway/src/: config.rs  downstream.rs  main.rs  upstream.rs
crates/tyclaw-agent/: Cargo.toml
crates/tyclaw-agent/src/: agent_loop.rs  compression.rs  loop_helpers.rs  runtime.rs
crates/tyclaw-agent/src/agent/: phase.rs  tool_runner.rs
crates/tyclaw-app/src/: main.rs
crates/tyclaw-channel/: Cargo.toml
crates/tyclaw-channel/src/: cli.rs
crates/tyclaw-channel/src/dingtalk/: ai_card.rs  bot.rs  credential.rs  gateway.rs  handler.rs  message.rs  mod.rs  stream.rs
crates/tyclaw-client/src/: main.rs
crates/tyclaw-control/src/: lib.rs  workspace.rs
crates/tyclaw-memory/src/: memory_store.rs
crates/tyclaw-orchestration/: Cargo.toml
crates/tyclaw-orchestration/src/: builder.rs  bus.rs  config.rs  handler.rs  helpers.rs  history.rs  lib.rs  memory_filter.rs  orchestrator.rs  reaper.rs  session_manager.rs  skill_manager.rs  term.rs  types.rs
crates/tyclaw-orchestration/src/subtasks/: config.rs  executor.rs  mod.rs  protocol.rs  scheduler.rs  tool.rs
crates/tyclaw-prompt/src/: context.rs  nudge_loader.rs  prompt_store.rs
crates/tyclaw-provider/src/: lib.rs  openai_compat.rs  provider.rs
crates/tyclaw-sandbox/src/: docker.rs
crates/tyclaw-sandbox/tests/: docker_test.rs
crates/tyclaw-tool-abi/src/: lib.rs
crates/tyclaw-tools/src/: base.rs  fileops.rs  filesystem.rs  interaction.rs  registry.rs  shell.rs
crates/tyclaw-tools/src/timer/: service.rs  tool.rs
crates/tyclaw-tools/src/web/: fetch.rs  search.rs
crates/tyclaw-types/src/: json_repair.rs  tokens.rs
docker/sandbox/: Dockerfile  entrypoint.sh
workspace/: defaults.py
workspace/config/: config.example.yaml  prompts.yaml
workspace/skills/data/adx-query/: SKILL.md
workspace/skills/data/cl-query/: SKILL.md
workspace/skills/data/discord/: SKILL.md
workspace/skills/data/figma/: SKILL.md
workspace/skills/data/ga-query/: SKILL.md
workspace/skills/data/gitlab/: SKILL.md
workspace/skills/data/gravity-rank/: SKILL.md
workspace/skills/data/qimai-query/: SKILL.md
workspace/skills/data/st-query/: SKILL.md
workspace/skills/data/td-query/: SKILL.md
workspace/skills/data/td-query/references/: endpoints.md  filters.md
workspace/skills/dingtalk/dingtalk-calendar/: SKILL.md
workspace/skills/dingtalk/dingtalk-docs/: SKILL.md
workspace/skills/dingtalk/dingtalk-report/: SKILL.md
workspace/skills/dingtalk/dingtalk-todo/: SKILL.md
workspace/skills/meta/memory/: SKILL.md
workspace/skills/meta/settings/: SKILL.md
workspace/skills/meta/skill-creator/: SKILL.md
workspace/skills/meta/skill-share/: SKILL.md  tool.py
workspace/skills/meta/skill-store/: SKILL.md  tool.py
workspace/skills/office/email-sender/: SKILL.md
workspace/skills/office/scheduler/: SKILL.md
workspace/skills/office/tb-task/: SKILL.md
workspace/skills/office/wechat-article/: SKILL.md  tool.py
workspace/skills/ops/html-viz/: SKILL.md
workspace/skills/ops/video-analyzer/: SKILL.md  tool.py
workspace/tools/: adx_query.py  cl_query.py  dingtalk_auth.py  dingtalk_calendar.py  dingtalk_doc.py  dingtalk_notable.py  dingtalk_report.py  dingtalk_sheet.py  dingtalk_todo.py  dingtalk_wiki.py  discord_api.py  email_reader.py  email_sender.py  figma_api.py  ga_query.py  gitlab_api.py  gravity_query.py  html_upload.py  image_upload.py  qimai_query.py  schedule_store.py  scheduler_tool.py  st_query.py  tb_task.py  td_query.py  user_settings.py  utils.py
