[workspace]
resolver = "2"
exclude = ["tools/relay_test"]
members = [
    "crates/tyclaw-types",
    "crates/tyclaw-provider",
    "crates/tyclaw-tool-abi",
    "crates/tyclaw-tools",
    "crates/tyclaw-control",
    "crates/tyclaw-memory",
    "crates/tyclaw-prompt",
    "crates/tyclaw-agent",
    "crates/tyclaw-orchestration",
    "crates/tyclaw-channel",
    "crates/tyclaw-sandbox",
    "crates/tyclaw-app",
    "crates/tyclaw-client",
    "crates/dingtalk-gateway",
]

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "fs", "net", "io-util", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "stream", "rustls-tls", "charset", "http2", "macos-system-configuration"] }
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "local-time"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
sha2 = "0.10"
md-5 = "0.10"
uuid = { version = "1", features = ["v4"] }
tiktoken-rs = "0.9"
async-trait = "0.1"
parking_lot = "0.12"
clap = { version = "4", features = ["derive", "env"] }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
futures-util = "0.3"
url = "2"
urlencoding = "2"
base64 = "0.22"
arc-swap = "1"

# workspace internal
tyclaw-types = { path = "crates/tyclaw-types" }
tyclaw-provider = { path = "crates/tyclaw-provider" }
tyclaw-tool-abi = { path = "crates/tyclaw-tool-abi" }
tyclaw-tools = { path = "crates/tyclaw-tools" }
tyclaw-control = { path = "crates/tyclaw-control" }
tyclaw-memory = { path = "crates/tyclaw-memory" }
tyclaw-prompt = { path = "crates/tyclaw-prompt" }
tyclaw-agent = { path = "crates/tyclaw-agent" }
tyclaw-orchestration = { path = "crates/tyclaw-orchestration" }
tyclaw-channel = { path = "crates/tyclaw-channel" }

[profile.release]
# 优先降低二进制体积（对性能影响较小到中等）
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
