[package]
name = "tyclaw-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tyclaw-types = { workspace = true }
tyclaw-provider = { workspace = true }
tyclaw-tool-abi = { workspace = true }
tyclaw-prompt = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
lazy_static = "1"
futures-util = { workspace = true }

[dev-dependencies]
tempfile = "3"
