[package]
name = "tyclaw-channel"
version = "0.1.0"
edition = "2021"

[dependencies]
tyclaw-types = { workspace = true }
tyclaw-orchestration = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
base64 = { workspace = true }
rustyline = "17.0.2"
tyclaw-tools = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
